fixing overflows

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -18,7 +18,7 @@ html {
 }
 
 main {
-	overflow-x: hidden;
+	overflow-y: hidden;
 }
 
 h1 {
